@@ -1,14 +1,19 @@
 package org.sopt.app.application.notification;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
+
 import lombok.RequiredArgsConstructor;
 import lombok.val;
 import org.sopt.app.common.exception.BadRequestException;
 import org.sopt.app.common.response.ErrorCode;
 import org.sopt.app.domain.entity.Notification;
 import org.sopt.app.domain.entity.User;
+import org.sopt.app.domain.enums.NotificationType;
 import org.sopt.app.interfaces.postgres.NotificationRepository;
+import org.sopt.app.interfaces.postgres.UserRepository;
 import org.sopt.app.presentation.notification.NotificationRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -19,31 +24,62 @@ import org.springframework.transaction.annotation.Transactional;
 public class NotificationService {
 
     private final NotificationRepository notificationRepository;
+    private final UserRepository userRepository;
 
     @Transactional(readOnly = true)
     public List<Notification> findNotificationList(User user, Pageable pageable) {
-        val notificationList = notificationRepository.findAllByUserId(user.getId(), pageable);
-        return notificationList;
+        return notificationRepository.findAllByPlaygroundId(user.getPlaygroundId(), pageable);
     }
 
     @Transactional
-    public Notification registerNotification(
-            Long userId,
+    public void registerNotification(
             NotificationRequest.RegisterNotificationRequest registerNotificationRequest
     ) {
-        val notification = Notification.builder()
-                .userId(userId)
-                .title(registerNotificationRequest.getTitle())
-                .content(registerNotificationRequest.getContent())
-//                .type(registerNotificationRequest.getType())
-                .isRead(false)
-                .build();
-        return notificationRepository.save(notification);
+        List<Long> playgroundIds = new ArrayList<>();
+        if (registerNotificationRequest.getType().equals(NotificationType.ALL)) {
+            playgroundIds = userRepository.findAllPlaygroundId();
+        } else if (registerNotificationRequest.getType().equals(NotificationType.INDIVIDUAL)) {
+            playgroundIds = registerNotificationRequest.getUserIds().stream()
+                    .map(Long::parseLong)
+                    .toList();
+        }
+        registerTo(playgroundIds, registerNotificationRequest);
+    }
+    private void registerTo(List<Long> playgroundIds, NotificationRequest.RegisterNotificationRequest registerNotificationRequest) {
+        val notifications = playgroundIds.stream()
+                .map(playgroundId -> Notification.builder()
+                        .playgroundId(playgroundId)
+                        .messageId(registerNotificationRequest.getMessageId())
+                        .title(registerNotificationRequest.getTitle())
+                        .content(registerNotificationRequest.getContent())
+                        .type(registerNotificationRequest.getType())
+                        .category(registerNotificationRequest.getCategory())
+                        .deepLink(registerNotificationRequest.getDeepLink())
+                        .webLink(registerNotificationRequest.getWebLink())
+                        .isRead(false)
+                        .build()
+                ).toList();
+        /*
+        for (Long playgroundId : playgroundIds) {
+            val notification = Notification.builder()
+                    .playgroundId(playgroundId)
+                    .messageId(registerNotificationRequest.getMessageId())
+                    .title(registerNotificationRequest.getTitle())
+                    .content(registerNotificationRequest.getContent())
+                    .type(registerNotificationRequest.getType())
+                    .category(registerNotificationRequest.getCategory())
+                    .deepLink(registerNotificationRequest.getDeepLink())
+                    .webLink(registerNotificationRequest.getWebLink())
+                    .isRead(false)
+                    .build();
+            notificationRepository.save(notification);
+         */
+        notificationRepository.saveAll(notifications);
     }
 
     @Transactional
     public void updateNotificationIsRead(User user, Long notificationId) {
-        if (notificationId == 0) {
+        if (Objects.isNull(notificationId)) {
             updateAllNotificationIsRead(user);
         } else {
             updateSingleNotificationIsRead(user, notificationId);
@@ -51,27 +87,29 @@ public class NotificationService {
     }
 
     private void updateAllNotificationIsRead(User user) {
-        val notificationList = notificationRepository.findAllByUserId(user.getId());
-        val readNotificationList = notificationList.stream().map(notification -> {
-            notification.updateIsRead();
-            return notification;
-        }).collect(Collectors.toList());
+        val notificationList = notificationRepository.findAllByPlaygroundId(user.getPlaygroundId());
+        val readNotificationList = notificationList.stream()
+                .map(notification -> {
+                        notification.updateIsRead();
+                        return notification;
+                    }
+                ).collect(Collectors.toList());
         notificationRepository.saveAll(readNotificationList);
     }
 
     private void updateSingleNotificationIsRead(User user, Long notificationId) {
-        val notification = notificationRepository.findByIdAndUserId(notificationId, user.getId())
+        val notification = notificationRepository.findByIdAndPlaygroundId(notificationId, user.getPlaygroundId())
                 .orElseThrow(() -> new BadRequestException(ErrorCode.NOTIFICATION_NOT_FOUND.getMessage()));
         notification.updateIsRead();
         notificationRepository.save(notification);
     }
 
     @Transactional(readOnly = true)
-    public Boolean getNotificationMainViewStatus(User user) {
-        val notificationList = notificationRepository.findAllByUserId(user.getId());
+    public Boolean getNotificationConfirmStatus(User user) {
+        val notificationList = notificationRepository.findAllByPlaygroundId(user.getPlaygroundId());
         val unreadNotificationList = notificationList.stream()
                 .filter(notification -> !notification.getIsRead())
-                .collect(Collectors.toList());
-        return unreadNotificationList.size() > 0;
+                .toList();
+        return unreadNotificationList.size() == 0;
     }
 }
